Fixing layout issues

--- a/src/Pages/AllCollectionsPage/AllCollectionsPage.module.css
+++ b/src/Pages/AllCollectionsPage/AllCollectionsPage.module.css
@@ -1,11 +1,11 @@
 .wrapper {
-  background-color: var(--color-background-dark);
-  border-radius: var(--border-radius-s);
-  padding: 1em;
+    background-color: var(--color-background-dark);
+    border-radius: var(--border-radius-s);
+    padding: 1em;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin: 3em 2em;
+    margin: 1.5em auto 3em;
 }
 
 .cardContainer {
